# anmar-bid-pro

./: .gitignore  README.md  SETUP.md  index.html  package-lock.json  package.json  preflight_check.py  tauri-update.key  tauri-update.key.pub
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  PCO_Template.docx  Proposal_Letter_Template.docx  Proposal_Letter_Template_fixed.docx  assemblies_seed.sql  grounding_seed.sql  pre_built_assemblies_seed.sql  saved_assemblies_seed.sql  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AssemblyPicker.tsx  ChangeOrderModal.tsx  CommodityAgeDialog.tsx  CommodityRepricingPrompt.tsx  CommoditySheetModal.tsx  ConfirmModal.tsx  DatabaseBackupModal.tsx  EditJobModal.tsx  ErrorBoundary.tsx  JobModals.tsx  LineItemDetailModal.tsx  MenuBar.tsx  NewJobModal.tsx  NewProjectModal.tsx  OpenJobModal.tsx  PCOLetterModal.tsx  ProgramSetupModal.tsx  ProposalLetterModal.tsx  SavedAssembliesModal.tsx  SectionBreakdownModal.tsx  Sidebar.tsx  SubstituteConfirmDialog.tsx  UpdateChecker.tsx  ZeroCostDialog.tsx
src/components/takeoff/: CableTakeoffForm.tsx  ConduitTakeoffForm.tsx  DevicesTakeoffForm.tsx  EquipConnTakeoffForm.tsx  FireAlarmTakeoffForm.tsx  GearTakeoffForm.tsx  (+15 more)
src/hooks/: commodityUtils.ts  db.ts  laborRates.ts  reportUtils.ts  takeoffCalculations.ts
src/pages/: Dashboard.tsx  NoJobView.tsx  ProjectEditor.tsx  ReportsView.tsx  SettingsPage.tsx
src/styles/: global.css
src/utils/: ExportEngine.ts  PrintEngine.ts
